# Ronako

./: .gitignore  AGENT_MARCUS.md  AUDIT.md  AUDIT_COMPLET.md  AUDIT_RESUME.md  CLAUDE.md  DIAGNOSTIC_FICHIERS.md  JOURNAL.md  PROGRESS.md  ROADMAP_LISIBLE.md  SETUP.md  index.html  install.ps1  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
scripts/: generate-icons.mjs  process-logo.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  commands.rs  folder.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/tools/: dalle.rs  e2b.rs  fal.rs  firecrawl.rs  flux.rs  gemini.rs  generic_api.rs  github.rs  ideogram.rs  mod.rs  notion.rs  tavily.rs  tts.rs
src/hooks/: useAgentChat.ts  useAnthropicStream.ts  useChainAnalyzer.ts  useChainOptimizer.ts  useChainRunner.ts  useCustomDeliverableAnalysis.ts  useJournalWatcher.ts  useKeyboardShortcuts.ts  useMarcusChat.ts  useMarcusPlan.ts  useProjectFolder.ts  useProjectMemory.ts  useSounds.ts  useTips.ts
src/lib/: adaptiveChain.ts  analysisCache.ts  apiCatalog.ts  briefAnalyzer.ts  briefCompressor.ts  buildMarcusAgentContext.ts  chainEngine.ts  chainModes.ts  claudeCodeFormatter.ts  clientReportGenerator.ts  consultantActions.ts  consultantContext.ts  costEstimator.ts  customDeliverableAnalyzer.ts  dependencyMatrix.ts  exportImport.ts  formatRequirements.ts  formatSelector.ts  globalSearch.ts  libraryManager.ts  marcusCheck.ts  mcpCatalog.ts  projectDNA.ts  (+12 more)
(+55 files in other folders)
